--- a/index.html
+++ b/index.html
@@ -41,6 +41,10 @@
     <div class="video"><video src="img/10.mp4" muted ></video></div>
     <div class="video"><video src="img/11.mp4" muted ></video></div>
     <div class="video"><video src="img/14.mp4" muted ></video></div>
+    <div class="video"><video src="img/15.mp4" muted ></video></div>
+    <div class="video"><video src="img/16.mp4" muted ></video></div>
+    <div class="video"><video src="img/17.mp4" muted ></video></div>
+
   </div>
   <div class="popup-video">
     <span>&times;</span>
