--- a/index.html
+++ b/index.html
@@ -25,10 +25,11 @@
 <body>
 
 <div class="container">
-  <h1>Video Gallery</h1>
+  <h1>Andy Esteban Serna Ochoa - Dev Reel</h1>
+  <h2>(Website in progress)</h2>
 
   <div class="video-container">
-    <div class="video"><video src="img/1.mp4" muted ></video></div>
+     <div class="video"><video src="img/1.mp4" muted ></video></div>
     <div class="video"><video src="img/1.1.mp4" muted ></video></div>
     <div class="video"><video src="img/2.mp4" muted ></video></div>
     <div class="video"><video src="img/3.mp4" muted ></video></div>
@@ -44,7 +45,6 @@
     <div class="video"><video src="img/15.mp4" muted ></video></div>
     <div class="video"><video src="img/16.mp4" muted ></video></div>
     <div class="video"><video src="img/17.mp4" muted ></video></div>
-
   </div>
   <div class="popup-video">
     <span>&times;</span>
