--- a/index.html
+++ b/index.html
@@ -26,9 +26,13 @@
 
 <div class="container">
 
-  <h1>HI, ANDY HERE</h1>
+  <h1>HI, ANDY HERE
+  </h1>
 
-<!--  <h2>dev</h2>-->
+  <a href="https://www.linkedin.com/in/andyestebanochoa/" class="custom-link" target="_blank">
+    <h2>CONTACT</h2>
+  </a>
+
 
 
   <div class="video-container">
@@ -52,7 +56,6 @@
     <div class="video">
       <video src="img/1.1.mp4" muted></video>
     </div>
-
 
 
     <div class="video">
