--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
 
   <div class="video-container">
     <div class="video">
+      <video src="img/Tiro.mp4" muted></video>
+    </div>
+    <div class="video">
       <video src="img/3.mp4" muted></video>
     </div>
     <div class="video">
